<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="mx.itesm.edu.tidprueba.AgregarEvento"
    android:rowCount="11"
    android:columnCount="2"
    android:background="@color/background">


    <ImageView
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:id="@+id/imageView6"
        android:layout_row="0"
        android:layout_column="0"
        android:src="@drawable/hist_dent_icono"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/HistDent"
        android:id="@+id/textView2"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="#ffffffff" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="#ff022a38"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evento"
        android:id="@+id/textView11"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />


    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:editable="true"
        android:hint="Descripcion del Evento"
        android:gravity="start"
        android:inputType="textCapSentences|textShortMessage|text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:id="@+id/textView10"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:background="@color/white" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_column="0"
        android:layout_columnSpan="2"

        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGuardar"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/done" />


</GridLayout>
