<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="mx.itesm.edu.tidprueba.AgregarEvento"
    android:rowCount="3"
    android:columnCount="2"
    android:background="@color/background">


    <ImageView
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:id="@+id/imageView6"
        android:layout_row="0"
        android:layout_column="0"
        android:src="@drawable/ic_action_dentista_web"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Pagos"
        android:id="@+id/textView2"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="#ffffffff" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="#ff022a38"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:rowCount="10"
            android:columnCount="1">
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_row="0"
                android:layout_column="0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"
                android:id="@+id/textView11"
                android:layout_row="1"
                android:layout_column="0"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff" />


            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:editable="true"
                android:hint="@string/cantidad"
                android:gravity="start"
                android:inputType="number|numberDecimal|numberSigned"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_row="3"
                android:layout_column="0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:id="@+id/textView10"
                android:layout_row="4"
                android:layout_column="0"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:inputType="textCapSentences|textShortMessage|text"/>
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="0"
                android:id="@+id/datePicker"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_column="0"
                android:layout_row="7"

                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonGuardar"
                android:layout_row="8"
                android:layout_column="0"
                android:src="@drawable/done"
                android:layout_gravity="center_horizontal"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_column="0"
                android:layout_row="9"

                />
        </GridLayout>

    </ScrollView>



</GridLayout>
